Fixed box spacing on dark theme

--- a/styles/darkStyles.css
+++ b/styles/darkStyles.css
@@ -45,7 +45,7 @@ body {
 }
 
 label {
-	margin-left: 15px;
+	margin-left: 5px;
 }
 
 .checkboxes{
@@ -111,4 +111,8 @@ p.author-name {
 input.user-radio {
 	margin-left: 8px;
 	margin-right: 8px;
+}
+
+input.checkboxes {
+	margin-left: 10px;
 }
